tests/neg-custom-args/captures/i21347.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i21347.scala:8:2 -----------------------------------------
8 |  () => runOps(f :: Nil) // error
  |  ^^^^^^^^^^^^^^^^^^^^^^
  |  Found:    () ->{f} Unit
  |  Required: () -> Unit
  |
  |  Note that capability `f` is not included in capture set {}.
  |
  | longer explanation available when compiling with `-explain`
-- Error: tests/neg-custom-args/captures/i21347.scala:11:15 ------------------------------------------------------------
11 |  ops.foreach: op => // error
   |               ^
   |               Local reach capability ops* leaks into capture scope of method runOpsAlt.
   |               You could try to abstract the capabilities referred to by ops* in a capset variable.
   |
12 |    op()
